--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,7 @@
 <head>
   <title>Tab Saver</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"> 
   <style>
   .container-sm { 
     min-height: 600px;
@@ -12,9 +13,24 @@
 </head>
 <body class="container-sm">
   <div class="container mt-4">  
-    <h1>Tab Saver</h1> 
-    <button id="saveTabs" class="btn btn-primary me-2">Save Tabs</button> 
-    <button id="loadTabs" class="btn btn-secondary">Load Tabs</button>  
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Tab Saver</a> 
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> 
+            <li class="nav-item">
+              <a class="nav-link" href="#"><i class="bi bi-gear-fill"></i></a> 
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="d-grid gap-2">
+      <button id="saveTabs" class="btn btn-primary mt-2">Save Tabs</button> 
+    </div>
   </div>
   <script src="popup.js"></script> 
 </body>
