--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,6 @@
 <head>
   <title>Tab Saver</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"> 
   <style>
   .container-sm { 
     min-height: 600px;
@@ -11,25 +10,18 @@
   } 
   </style>
 </head>
-<body class="container-sm">
-  <div class="container mt-4">  
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Tab Saver</a> 
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarContent">
-          <ul class="navbar-nav ms-auto mb-2 mb-lg-0"> 
-            <li class="nav-item">
-              <a class="nav-link" href="#"><i class="bi bi-gear-fill"></i></a> 
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
+<body class="container-sm bg-dark text-white">
+  <div class="container mt-4">
+    <div class="container text-center">
+      <h1 class="display-6">Tab Saver</h1> 
+    </div>    
     <div class="d-grid gap-2">
-      <button id="saveTabs" class="btn btn-primary mt-2">Save Tabs</button> 
+      <button id="saveTabs" class="btn btn-outline-light mt-2">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-save" viewBox="0 0 16 16">
+          <path d="M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1z"/>
+        </svg>
+        </button>
+      </button> 
     </div>
   </div>
   <script src="popup.js"></script> 
