Use on hover list item styling instead of Bootstrap button

--- a/popup.html
+++ b/popup.html
@@ -8,6 +8,10 @@
     min-height: 600px;
     min-width: 400px; 
   } 
+  #listItem:hover {
+    background-color: #F0F0F0;
+    /* color: white; */
+  }
   </style>
 </head>
 <body class="container-sm bg-dark text-white">
